@@ -4,6 +4,6 @@ env:
   - MYSQL_URI=mysql://root@127.0.0.1:3306/
 script:
   - pip install tox
-  - tox -e sqlite,postgresql
+  - tox -e "py27-{sqlite,postgresql}"
 services:
   - postgres
