@@ -1,11 +1,12 @@
 [tox]
-envlist = py27-{sqlite,postgresql,mysql}
+envlist = py27-{sqlite,postgresql,mysql},pypy-{sqlite,postgresql}
 
 [testenv]
 commands = {envpython} setup.py test
 deps =
     mock
-    postgresql: psycopg2 >= 2.0
+    py27-postgresql: psycopg2 >= 2.0
+    pypy-postgresql: psycopg2cffi >= 2.5
     mysql: MySQL-python
 setenv =
     sqlite: TRYTOND_DATABASE_URI={env:SQLITE_URI:sqlite://}
