@@ -1,3 +1,5 @@
+* Add support for PyPy
+* Add support for psycopg2cffi
 * Add noeval on PYSONDecoder
 * Add __repr__ to PYSON
 * Remove safe_eval
